--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Flask App to GitHub Pages
+name: Build and Deploy Static Site to GitHub Pages
 
 on:
   push:
@@ -15,11 +15,6 @@ concurrency:
   group: "pages"
   cancel-in-progress: false
 
-env:
-  BUILD_NUMBER: 1
-  BUILD_VERSION: 1.0.0
-  PYTHON_VERSION: 3.12.2
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -28,24 +23,17 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
-    - name: Setup Python ${{ env.PYTHON_VERSION }}
-      uses: actions/setup-python@v2
-      with:
-        python-version: ${{ env.PYTHON_VERSION }}
-
-    - name: Install Python Dependencies
+    - name: Prepare Deployment Directory
       run: |
-        python -m pip install --upgrade pip
-        pip install -r requirements.txt
-
-    - name: Prepare Static Files for Deployment
-      run: |
-        mkdir -p build
-        cp -r static build/
-        cp -r templates build/
-        cp index.py build/
+        mkdir -p build/static
+        mkdir -p build/templates
+        cp -r static/* build/static/
+        cp -r templates/* build/templates/
         cp README.md build/
-        cp requirements.txt build/
+
+        # Move index.html to the root of the build directory
+        cp build/templates/index.html build/index.html
+        # Optionally, you might also want to copy other files as needed
 
     - name: List files for debugging
       run: |
@@ -54,8 +42,8 @@ jobs:
     - name: Upload Artifact
       uses: actions/upload-pages-artifact@v3
       with:
-        name: flask-build-artifact
-        path: ./build  # Adjust this if necessary to match your actual build output directory
+        name: static-site-artifact
+        path: ./build
 
   deploy:
     needs: build
@@ -77,4 +65,4 @@ jobs:
         id: deployment
         uses: actions/deploy-pages@v4.0.5
         with:
-          artifact_name: flask-build-artifact
+          artifact_name: static-site-artifact
