--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,4 +1,4 @@
-name: Build and Deploy Static Site to GitHub Pages
+name: Build and Deploy Static Files to GitHub Pages
 
 on:
   push:
@@ -11,10 +11,6 @@ on:
       - main
   workflow_dispatch:
 
-concurrency:
-  group: "pages"
-  cancel-in-progress: false
-
 jobs:
   build:
     runs-on: ubuntu-latest
@@ -23,27 +19,34 @@ jobs:
     - name: Checkout code
       uses: actions/checkout@v4
 
+    - name: Setup Python
+      uses: actions/setup-python@v2
+      with:
+        python-version: '3.12'
+
+    - name: Install Python Dependencies
+      run: |
+        python -m pip install --upgrade pip
+        pip install -r requirements.txt
+
     - name: Prepare Deployment Directory
       run: |
-        mkdir -p build/static
-        mkdir -p build/templates
-        cp -r static/* build/static/
-        cp -r templates/* build/templates/
-        cp README.md build/
-
-        # Move index.html to the root of the build directory
-        cp build/templates/index.html build/index.html
-        # Optionally, you might also want to copy other files as needed
+        mkdir -p docs/static/images
+        cp -r static/* docs/static/
+        cp templates/* docs/
+        cp README.md docs/
+        # Copy index.html to the root of the docs directory
+        cp docs/templates/index.html docs/index.html
 
     - name: List files for debugging
       run: |
-        ls -R build
+        ls -R docs
 
     - name: Upload Artifact
       uses: actions/upload-pages-artifact@v3
       with:
         name: static-site-artifact
-        path: ./build
+        path: ./docs
 
   deploy:
     needs: build
@@ -61,7 +64,6 @@ jobs:
         uses: actions/configure-pages@v5
 
       - name: Deploy to GitHub Pages 🚀
-        if: github.event_name == 'push'
         id: deployment
         uses: actions/deploy-pages@v4.0.5
         with:
